# PromptDirectory

./: LICENSE  README.md
pd/: README.md  launch.sh  main.py  pyproject.toml  release.sh  snippet_repo.py
pd/pd/: cli.py  repl.py
pd/pd/commands/: sync_cmd.py
pd/pd/utils/: browser.py
promptdir/: launch.sh  pyproject.toml
promptdir/promptdir/: cli.py  repl.py
promptdir/promptdir/commands/: __init__.py  copy_cmd.py  delete_cmd.py  edit_cmd.py  fork_cmd.py  help_cmd.py  list_cmd.py  new_cmd.py  read_cmd.py  rename_cmd.py  search_cmd.py  write_cmd.py
promptdir/promptdir/utils/: ollama_runner.py  snippet_repo.py
