[project]
name = "pd"
version = "0.1.0"
description = "Prompt Directory - A tool for managing prompts"
authors = [
    { name = "Patrick Beagan", email = "pbeagan@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
pd = "pd.cli:main"

[tool.setuptools]
packages = ["pd"]