[project]
name = "promptdir"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pbeagan" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
]

[project.scripts]
promptdir = "promptdir:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

